<?xml version="1.0"?>
<package format="3">
  <name>caltech_m4_bringup</name>
  <version>0.1.0</version>
  <description>Launch files for bringing up caltech m4, including configurations for swarm_bt_server and glp.</description>
  <maintainer email="erwin.lejeune@tii.ae">Erwin Lejeune</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>swarm_bt_server</depend>
  <depend>swarm_launch_utils</depend>
  <depend>swarm_lifecycle_manager</depend>
  <depend>ground_local_planner</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
